--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -56,23 +56,23 @@
                     
                     <tr>
                         <th>One</th>
-                        <td>{{#if d0.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d1.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d2.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d3.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d4.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d5.first}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d6.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d0.endgame}} .black {{else}} .grey {{/if}}">{{#if d0.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d1.endgame}} .black {{else}} .grey {{/if}}">{{#if d1.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d2.endgame}} .black {{else}} .grey {{/if}}">{{#if d2.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d3.endgame}} .black {{else}} .grey {{/if}}">{{#if d3.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d4.endgame}} .black {{else}} .grey {{/if}}">{{#if d4.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d5.endgame}} .black {{else}} .grey {{/if}}">{{#if d5.first}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d6.endgame}} .black {{else}} .grey {{/if}}">{{#if d6.first}} x {{else}} o {{/if}}</td>
                     </tr>
                     <tr>
                         <th>two</th>
-                        <td>{{#if d0.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d1.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d2.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d3.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d4.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d5.second}} x {{else}} o {{/if}}</td>
-                        <td>{{#if d6.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d0.endgame}} .black {{else}} .grey {{/if}}">{{#if d0.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d1.endgame}} .black {{else}} .grey {{/if}}">{{#if d1.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d2.endgame}} .black {{else}} .grey {{/if}}">{{#if d2.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d3.endgame}} .black {{else}} .grey {{/if}}">{{#if d3.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d4.endgame}} .black {{else}} .grey {{/if}}">{{#if d4.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d5.endgame}} .black {{else}} .grey {{/if}}">{{#if d5.second}} x {{else}} o {{/if}}</td>
+                        <td class="{{#if d6.endgame}} .black {{else}} .grey {{/if}}">{{#if d6.second}} x {{else}} o {{/if}}</td>
                     </tr>
         </tbody>
       </table>
