--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -17,7 +17,7 @@
     <label class="large-6 small-6 medium-6 columns">
         {{lang.alarm.foot}}
     </label>   
-    <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">Set</div>
+    <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">{{lang.alarm.set}}</div>
 </div> 
 {{#if user}}
          
@@ -42,7 +42,7 @@
       <table class="table">
         <thead>
           <tr>
-                        <th>Week</th>
+                        <th>{{lang.table.week}}</th>
                         <th>S</th>
                         <th>M</th>
                         <th>T</th>
