--- a/client/score/score.html
+++ b/client/score/score.html
@@ -2,20 +2,20 @@
 <template name="score"> 
 	<div class="main container page textCenter" route="#admin">
 		<center>
-	   		<h3>Users</h3>
+	   		<h3>{{lang.timer.user}}</h3>
 		</center>
 		{{#each myScore}}
 			<div class="row">
-			  <div class="small-3 large-6 columns">score</div>
-			  <div class="small-4 large-4 columns">time</div>
+			  <div class="small-3 large-6 columns">{{lang.timer.score}}</div>
+			  <div class="small-4 large-4 columns">{{lang.timer.time}}</div>
 			</div>
 			<div class="row">
 			  	<div class="small-3 large-6 columns">{{score}}</div>
 			  	<div class="small-4 large-4 columns">{{date}}</div>
 			</div>
 			<div class="row">
-				  	<div class="small-6 large-2 columns">True or False</div>
-				  	<div class="small-6 large-4 columns">Time Taken</div>
+				  	<div class="small-6 large-2 columns">{{lang.timer.tf}}</div>
+				  	<div class="small-6 large-4 columns">{{lang.timer.tt}}</div>
 			</div>
 			<div class="row">
 				{{#each totalScore.method}}
@@ -26,4 +26,4 @@
 		{{/each}}
 	</div>
 	
-</template>
+</template> 
