--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -5,12 +5,12 @@
     </div>
     <div class="row">
         <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
-            <input id="firstAlarm" size="16" type="time" value="{{alarm.first.localtime}}">
+            <input id="firstAlarm" size="16" type="time" value="{{first.localtime}}">
             <span class="add-on"><i class="icon-th"></i></span>
         </div>
     
         <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
-            <input id="secondAlarm" size="16" type="time" value="{{alarm.second.localtime}}">
+            <input id="secondAlarm" size="16" type="time" value="{{second.localtime}}">
             <span class="add-on"><i class="icon-th"></i></span>
         </div>
     </div>
