--- a/client/index/index.html
+++ b/client/index/index.html
@@ -3,6 +3,7 @@
     <!-- <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" /> -->
   	<title>sixteensmiles</title>
   	<link rel="stylesheet" href="/lib/foundation/css/foundation.css" />
+    <script src="/lib/foundation/js/foundation.orbit.js"></script>
    <!--  // <script src="http://damnationalley.vincentstephens.co.uk/js/jquery.js"></script>
     // <script src="http://damnationalley.vincentstephens.co.uk/docs/_assets/js/jquery.mobile.demos.js"></script>
     // <script src="http://damnationalley.vincentstephens.co.uk/js/jquery.mobile-1.3.0.js"></script> -->
