--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -1,4 +1,5 @@
 <template name="menuListPanel">
+    {{> slider}}
 <div class="large-12 small-12 medium-12 columns panel">
     <div class="row">
         {{lang.alarm.head}}
