--- a/client/menu/slider/slider.html
+++ b/client/menu/slider/slider.html
@@ -31,12 +31,10 @@
 		    animation: 'slide',
 		    timer_speed: 2000,
 		    pause_on_hover: true,
-		    animation_speed: 400,
+		    animation_speed: 700,
 		    navigation_arrows: true,
 		    bullets: false,
-		    slide_number_text: '-',
-		    timer_progress_class: false,
-		    timer_paused_class: false,
+		    slide_number_text: 'of',
   		}
 	})
 </script>
