--- a/client/index/index.html
+++ b/client/index/index.html
@@ -1,6 +1,6 @@
 <head>
     <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">  
-    <!-- <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" /> -->
+    <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" />
   	<title>sixteensmiles</title>
   	<link rel="stylesheet" href="/library/foundation/css/foundation.css" />
     <!--  // <script src="http://damnationalley.vincentstephens.co.uk/js/jquery.js"></script>
