--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -6,7 +6,7 @@
                 <div class="beforeStartGame message row">
                     <div class="remove textRight">{{app.lang.gamePopUp.close}}</div>
                     <div class=" large-12 columns">
-                        <div class="  panel " style="">
+                        <div class="" style="">
                             <p>{{lang.gamePopUp.mgs1}}</p>
                         </div>
                     </div>
