--- a/client/menu/weeks.html
+++ b/client/menu/weeks.html
@@ -2,37 +2,37 @@
 	<table id="weeks" class="table">
         <thead>
          	<tr>
-                        <th>{{lang.table.week}}</th>
+                        <!-- <th>{{lang.table.week}}</th>
                         <th>{{lang.table.d0}}</th>
                         <th>{{lang.table.d1}}</th>
                         <th>{{lang.table.d2}}</th>
                         <th>{{lang.table.d3}}</th>
                         <th>{{lang.table.d4}}</th>
                         <th>{{lang.table.d5}}</th>
-                        <th>{{lang.table.d6}}</th>
+                        <th>{{lang.table.d6}}</th> -->
             </tr>
         </thead>
         <tbody>
                     
                     <tr class="endgame1">
                         <th >{{lang.table.col1}}</th>
-                        <td class="{{#if d0.endgame1}} black {{else}} grey {{/if}}">{{#if d0.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
+                        <!-- <td class="{{#if d0.endgame1}} black {{else}} grey {{/if}}">{{#if d0.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d1.endgame1}} black {{else}} grey {{/if}}">{{#if d1.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d2.endgame1}} black {{else}} grey {{/if}}">{{#if d2.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d3.endgame1}} black {{else}} grey {{/if}}">{{#if d3.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d4.endgame1}} black {{else}} grey {{/if}}">{{#if d4.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d5.endgame1}} black {{else}} grey {{/if}}">{{#if d5.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
-                        <td class="{{#if d6.endgame1}} black {{else}} grey {{/if}}">{{#if d6.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
+                        <td class="{{#if d6.endgame1}} black {{else}} grey {{/if}}">{{#if d6.first}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td> -->
                     </tr>
                     <tr class="endgame2">
                         <th>{{lang.table.col2}}</th>
-                        <td class="{{#if d0.endgame2}} black {{else}} grey {{/if}}">{{#if d0.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
+                        <!-- <td class="{{#if d0.endgame2}} black {{else}} grey {{/if}}">{{#if d0.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d1.endgame2}} black {{else}} grey {{/if}}">{{#if d1.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d2.endgame2}} black {{else}} grey {{/if}}">{{#if d2.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d3.endgame2}} black {{else}} grey {{/if}}">{{#if d3.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d4.endgame2}} black {{else}} grey {{/if}}">{{#if d4.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
                         <td class="{{#if d5.endgame2}} black {{else}} grey {{/if}}">{{#if d5.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
-                        <td class="{{#if d6.endgame2}} black {{else}} grey {{/if}}">{{#if d6.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td>
+                        <td class="{{#if d6.endgame2}} black {{else}} grey {{/if}}">{{#if d6.second}} <i class="fa fa-smile-o"></i> {{else}} <i class="fa fa-frown-o"></i> {{/if}}</td> -->
                     </tr>
         </tbody>
       </table>
