--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -1,13 +1,13 @@
 <template name="home"> 
-	<div class="column large-4 small-0 medium-3">
-	</div>
-	<div class="column large-4 large-centered small-12 medium-6 medium-centered ">
+	<div class="column large-4 large-centered small-12 medium-12">
 	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
     		<!-- {{> timeCount}}  -->
-	    	{{> menuListPanel}}
+    	<div id="rest">
+    		{{> menuListPanel}}
+    	</div>
+    	<div id="gameMain">
+    		{{> famous}}
+    	</div>
 		<!-- </div> -->
-    	{{> famous}}
     </div>
-	<div class="column large-4 small-0 medium-3">
-	</div>
 </template>
