--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -2,105 +2,105 @@
     <div class="large-12 small-12 medium-12 columns panel">
         {{> slider}}
     </div>
-<div class="large-12 small-12 medium-12 columns panel">
-    <div class="row">
-        {{lang.alarm.head}}
-    </div>
-    <div class="row">
-        <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
-            <input id="firstAlarm" size="16" type="time" value="{{first.localtime}}">
-            <span class="add-on"><i class="icon-th"></i></span>
-        </div>
-    
-        <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
-            <input id="secondAlarm" size="16" type="time" value="{{second.localtime}}">
-            <span class="add-on"><i class="icon-th"></i></span>
-        </div>
-    </div>
-    <label class="large-12 small-12 medium-12 columns">
-        {{lang.alarm.foot}}
-    </label>   
-    <!-- <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">{{lang.alarm.set}}</div> -->
-</div> 
-{{#if user}}
     <div class="large-12 small-12 medium-12 columns panel">
-        <a href="#" id="welcome">{{welcome}}</a>
-        <ul id="" class="off-canvas-list welcome">
-            <li>
-                <a href="#" class="height40">
-                    <label class="large-8 small-7 medium-8 columns" id="OpenProfile">{{myusername}}</label>
-                    <label class="large-4 small-5 medium-4 columns" id="LogoutApp" >{{lang.scorebord.notyou}}</label>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="height40">
-                    <label class="large-9 small-7 medium-9 columns ">{{lang.scorebord.days}}</label>
-                    <label class="large-3 small-5 medium-3 columns  ">{{profile.playContinuty}}</label>
-                </a>
-            </li>
-            <li>
-                <a href="#" class="">
-                    <div class="table-responsive">          
-                        {{> weeks}}
-                    </div>              
-                </a>
-            </li>
-            <li>
-                <a href="#" class="height40">
-                    <label class="large-9 small-4 medium-9 columns">{{lang.scorebord.seen}}</label>
-                    <label class="large-3 small-5 medium-3 columns noPadding " style="font: -webkit-small-control;">{{lastseen}}</label><!-- {{profile.lastPlayed}} -->
-                </a>
-            </li>
-            <li>
-                <a href="#" class="height40">
-                    <label class="large-9 small-7 medium-9 columns">{{lang.scorebord.mxscore}}</label>
-                    <label class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</label>
-                </a>
-            </li>
-            <li class="textRight">
-                <a href="#" class="height40">
-                    <label class="large-3 small-3 medium-3 columns textLeft">{{lang.scorebord.email}}:</label>
-                    <label class="large-9 small-9 medium-9 columns textRight">{{myEmail}}</label>
-                </a>                
-            </li>
-        </ul>  
-    </div>
-    <div class="large-12 small-12 medium-12 columns panel Challange">
-        <h5>{{lang.email.head}}</h5>
-        <label>{{lang.email.msg1}}
-            <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
-            <a  class="large-5 small-5 medium-5 columns">{{lang.email.msg2}} </a>
-            <a id="inviteFriends" class="large-4 small-4 medium-4 columns" href=""><i class="fa fa-facebook-square"></i> </a>
-            <a id="inviteEmail" class="large-3 small-3 medium-3 columns" href=""><i class="fa fa-envelope"></i></a>
-        </label>
-    </div>  
-    <!-- #inviteFriends -->
-    <div class="large-12 small-12 medium-12 columns panel lastScore">
-        <h5>{{lang.scoretitle.lastscore}}</h5>
+        <div class="large-12 small-12 medium-12 columns">
+            {{lang.alarm.head}}
+        </div>
+        <div class="large-12 small-12 medium-12 columns">
+            <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
+                <input id="firstAlarm" size="16" type="time" value="{{first.localtime}}">
+                <span class="add-on"><i class="icon-th"></i></span>
+            </div>
+        
+            <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
+                <input id="secondAlarm" size="16" type="time" value="{{second.localtime}}">
+                <span class="add-on"><i class="icon-th"></i></span>
+            </div>
+        </div>
         <label class="large-12 small-12 medium-12 columns">
-            <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.attemted}}</label>
-            <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.lastscore}}</label>
-            <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.missed}}</label>
-        </label>
-        <label class="large-12 small-12 medium-12 columns">
-            <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastTried}}</label>
-            <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastScore}}</label>
-            <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastWrong}}</label>
-        </label>
-    </div>
-{{else}}
-    <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
-        <a href="#">Login</a>
-    </div> -->
-     <div id="loginScreenFacebook" class="large-12 small-12 medium-12 columns panel textCenter" >
-        <a>
-            <i class="fa fa-facebook"></i> {{lang.menu.fbLogin}}
-        </a>
-    </div>
- {{/if}}   
- <div class="large-12 small-12 medium-12 columns panel">
-    {{> GamerTimerimer}}
-</div>    
+            {{lang.alarm.foot}}
+        </label>   
+        <!-- <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">{{lang.alarm.set}}</div> -->
+    </div> 
+    {{#if user}}
+        <div class="large-12 small-12 medium-12 columns panel">
+            <a href="#" id="welcome">{{welcome}}</a>
+            <ul id="" class="off-canvas-list welcome">
+                <li>
+                    <a href="#" class="height40">
+                        <label class="large-8 small-7 medium-8 columns" id="OpenProfile">{{myusername}}</label>
+                        <label class="large-4 small-5 medium-4 columns" id="LogoutApp" >{{lang.scorebord.notyou}}</label>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="height40">
+                        <label class="large-9 small-7 medium-9 columns ">{{lang.scorebord.days}}</label>
+                        <label class="large-3 small-5 medium-3 columns  ">{{profile.playContinuty}}</label>
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="">
+                        <div class="table-responsive">          
+                            {{> weeks}}
+                        </div>              
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="height40">
+                        <label class="large-9 small-4 medium-9 columns">{{lang.scorebord.seen}}</label>
+                        <label class="large-3 small-5 medium-3 columns noPadding " style="font: -webkit-small-control;">{{lastseen}}</label><!-- {{profile.lastPlayed}} -->
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="height40">
+                        <label class="large-9 small-7 medium-9 columns">{{lang.scorebord.mxscore}}</label>
+                        <label class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</label>
+                    </a>
+                </li>
+                <li class="textRight">
+                    <a href="#" class="height40">
+                        <label class="large-3 small-3 medium-3 columns textLeft">{{lang.scorebord.email}}:</label>
+                        <label class="large-9 small-9 medium-9 columns textRight">{{myEmail}}</label>
+                    </a>                
+                </li>
+            </ul>  
+        </div>
+        <div class="large-12 small-12 medium-12 columns panel Challange">
+            <h5>{{lang.email.head}}</h5>
+            <label>{{lang.email.msg1}}
+                <textarea id="getEmails" placeholder="Enter emails..." value="">{{#each list}}{{ids}},{{/each}}</textarea>
+                <a  class="large-5 small-5 medium-5 columns">{{lang.email.msg2}} </a>
+                <a id="inviteFriends" class="large-4 small-4 medium-4 columns" href=""><i class="fa fa-facebook-square"></i> </a>
+                <a id="inviteEmail" class="large-3 small-3 medium-3 columns" href=""><i class="fa fa-envelope"></i></a>
+            </label>
+        </div>  
+        <!-- #inviteFriends -->
+        <div class="large-12 small-12 medium-12 columns panel lastScore">
+            <h5>{{lang.scoretitle.lastscore}}</h5>
+            <label class="large-12 small-12 medium-12 columns">
+                <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.attemted}}</label>
+                <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.lastscore}}</label>
+                <label class="large-4 small-4 medium-4 columns">{{lang.scoretitle.missed}}</label>
+            </label>
+            <label class="large-12 small-12 medium-12 columns">
+                <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastTried}}</label>
+                <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastScore}}</label>
+                <label class="large-4 small-4 medium-4 columns lastResult">{{profile.lastWrong}}</label>
+            </label>
+        </div>
+    {{else}}
+        <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
+            <a href="#">Login</a>
+        </div> -->
+         <div id="loginScreenFacebook" class="large-12 small-12 medium-12 columns panel textCenter" >
+            <a>
+                <i class="fa fa-facebook"></i> {{lang.menu.fbLogin}}
+            </a>
+        </div>
+    {{/if}}   
+    <div class="large-12 small-12 medium-12 columns panel">
+        {{> GamerTimerimer}}
+    </div>    
 </template>
     <!-- <div class="large-4 small-12 medium-6 columns panel">
         <ul id="MenuRole" class="off-canvas-list">
