--- a/client/index/index.html
+++ b/client/index/index.html
@@ -1,7 +1,7 @@
 <head>
     <meta name="viewport" content="width=device-width, maximum-scale=1, user-scalable=no">  
-    <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" />
-  	<title>sixteensmiles</title>
+    <!-- <meta name="viewport" content="height=device-height, width=device-width, user-scalable=no" /> -->
+  	<title>sixteensmile</title>
   	<link rel="stylesheet" href="/library/foundation/css/foundation.css" />
     <!--  // <script src="http://damnationalley.vincentstephens.co.uk/js/jquery.js"></script>
     // <script src="http://damnationalley.vincentstephens.co.uk/docs/_assets/js/jquery.mobile.demos.js"></script>
