--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -4,10 +4,10 @@
     </div>
     {{#if user}}
         <div class="large-12 small-12 medium-12 columns panel">
-            <div class="large-12 small-12 medium-12 columns">
+            <div class="large-12 small-12 medium-12 columns alarmHead">
                 {{lang.alarm.head}}
             </div>
-            <div class="large-12 small-12 medium-12 columns">
+            <div class="large-12 small-12 medium-12 columns alarmBody">
                 <div class="input-append date large-6 small-6 medium-6 columns" id="dp3"  >
                     <input id="firstAlarm" size="16" type="time" value="{{first.localtime}}">
                     <span class="add-on"><i class="icon-th"></i></span>
@@ -18,7 +18,7 @@
                     <span class="add-on"><i class="icon-th"></i></span>
                 </div>
             </div>
-            <label class="large-12 small-12 medium-12 columns">
+            <label class="large-12 small-12 medium-12 columns alarmFoot">
                 {{lang.alarm.foot}}
             </label>   
             <!-- <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">{{lang.alarm.set}}</div> -->
