--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -37,3 +37,16 @@
             </div>   
     </div>
 </template>
+<template name="onScore">
+    <div id="onScore" class=" overlay">
+            <div data-alert="" class="popups panel large-12 medium-12 small-12 columns textCenter">
+                <!-- {{> GamerTimerimer}} -->
+                <!-- <div id="endGame" class="button ui " style="background:cyan;">            
+                    {{lang.gamePopUp.restart}}
+                </div> -->
+                <div id="" class="button ui " style="background:cyan;">            
+                    {{lang.gamePopUp.feedBackOnScore}}
+                </div>
+            </div>   
+    </div>
+</template>
