--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -19,5 +19,6 @@
 		
 		<!-- <div id="endGame" class="small-1 columns">X</div> -->
 		<!-- <div class="small-1 columns textRight" style="background: grey;" id="endGame">X</div> -->
+		{{> onScore}}
 	</div>
 </template>
