--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -8,6 +8,9 @@
     	<div id="gameMain">
     		{{> famous}}
     	</div>
+        <div class="large-12 small-12 medium-12 columns panel">
+            {{> updated}}
+        </div>
 		<!-- </div> -->
     </div>
 </template>
