--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -8,7 +8,7 @@
     	<div id="gameMain">
     		{{> famous}}
     	</div>
-        <div class="large-12 small-12 medium-12 columns panel">
+        <div class="large-12 small-12 medium-12 columns ">
             {{> updated}}
         </div>
 		<!-- </div> -->
