rate and update added

--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -69,3 +69,24 @@
     </div>
     {{/if}} 
 </template>
+
+
+<template name="ratingPopup">
+ <div class="large-12 small-12 medium-12 columns panel">
+    <div id="rating" class="">
+            <div data-alert="" class="popups  large-12 medium-12 small-12 columns textCenter">
+                Thanks! We'd love for you to share your feedback on the Play Store and help us make the Internet better.  
+                      
+            </div>   
+            <div data-alert="" class="popups  large-12 medium-12 small-12 textCenter">
+                <div id="rateDecline" class="button ui" style="background:cyan;">            
+                        No, Thanks
+                </div>
+                <div id="rateAccept" class="button ui" style="background:cyan;">            
+                    Rate Whogothappy
+                </div> 
+            </div>
+
+    </div>
+    </div>
+</template>
