--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -35,6 +35,7 @@
                 <div id="endGame" class="button ui " style="background:cyan;">            
                     {{lang.gamePopUp.restart}}
                 </div>
+                <a id="shareWithFacebook" class="large-4 small-4 medium-4 columns" ><i class="fa fa-facebook-square"></i> </a>
             </div>   
     </div>
 </template>
