share scenario added

--- a/client/profile/profile.html
+++ b/client/profile/profile.html
@@ -1,6 +1,6 @@
 <template name="profile">
 	<div class="large-4 small-12 medium-6 columns text-center">
-        <a href="#">{{user.username}}</a>
+        <a >{{user.username}}</a>
     </div>
     <div class="large-4 small-12 medium-6 columns text-center">
     	<div class="text-center">
