--- a/client/famous/demo.html
+++ b/client/famous/demo.html
@@ -49,7 +49,7 @@
 </template>
 <template name="content"> 
 		<!-- <div id="endGame" class="textRight ">
-	    	<a href="#" class="textRight" id="endGame">STOP</a>
+	    	<a  class="textRight" id="endGame">STOP</a>
   		</div> -->
 	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
 		{{#each image}}
