--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -24,41 +24,41 @@
             <!-- <div id="setAlarm" class="button ui large-6 small-6 medium-6 columns" style="background:cyan;">{{lang.alarm.set}}</div> -->
         </div> 
         <div class="large-12 small-12 medium-12 columns panel">
-            <a href="#" id="welcome">{{welcome}}</a>
+            <a   id="welcome">{{welcome}}</a>
             <ul id="" class="off-canvas-list welcome">
                 <li>
-                    <a href="#" class="height40">
+                    <a   class="height40">
                         <label class="large-8 small-7 medium-8 columns" id="OpenProfile">{{myusername}}</label>
                         <label class="large-4 small-5 medium-4 columns" id="LogoutApp" >{{lang.scorebord.notyou}}</label>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="height40">
+                    <a   class="height40">
                         <label class="large-9 small-7 medium-9 columns ">{{lang.scorebord.days}}</label>
                         <label class="large-3 small-5 medium-3 columns  ">{{profile.playContinuty}}</label>
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="">
+                    <a  class="">
                         <div class="table-responsive">          
                             {{> weeks}}
                         </div>              
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="height40">
+                    <a  class="height40">
                         <label class="large-9 small-4 medium-9 columns">{{lang.scorebord.seen}}</label>
                         <label class="large-3 small-5 medium-3 columns noPadding " style="font: -webkit-small-control;">{{lastseen}}</label><!-- {{profile.lastPlayed}} -->
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="height40">
+                    <a  class="height40">
                         <label class="large-9 small-7 medium-9 columns">{{lang.scorebord.mxscore}}</label>
                         <label class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</label>
                     </a>
                 </li>
                 <li class="textRight">
-                    <a href="#" class="height40">
+                    <a  class="height40">
                         <label class="large-3 small-3 medium-3 columns textLeft">{{lang.scorebord.email}}:</label>
                         <label class="large-9 small-9 medium-9 columns textRight">{{myEmail}}</label>
                     </a>                
@@ -90,7 +90,7 @@
         </div>
     {{else}}
         <!-- <div id="loginScreenFacebook" class="large-4 small-12 medium-6 columns panel textCenter">
-            <a href="#">Login</a>
+            <a >Login</a>
         </div> -->
          <div id="loginScreenFacebook" class="large-12 small-12 medium-12 columns panel textCenter" >
             <a>
