share scenario added

--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -21,4 +21,10 @@
 		<!-- <div class="small-1 columns textRight" style="background: grey;" id="endGame">X</div> -->
 		{{> onScore}}
 	</div>
+	<div class="row">
+		{{lang.facebook.shareThisScore}}
+		<a id="shareWithFacebook" class="large-4 small-4 medium-4 columns" ><i class="fa fa-facebook-square"></i> </a>
+		<a id="shareWithTwitter" class="large-4 small-4 medium-4 columns" ><i class="fa fa-twitter-square"></i> </a>
+		<a id="shareWithAny" class="large-4 small-4 medium-4 columns" ><i class="fa fa-adn-square"></i> </a>
+	</div>
 </template>
