--- a/client/index/index.html
+++ b/client/index/index.html
@@ -19,6 +19,11 @@
             $("head").append('<script type="text/javascript" src="/phonegap/cdv-plugin-fb-connect.js"/>');
         }
     </script>
+    <link href="./owl/owl.carousel.css" rel="stylesheet">
+    <script src="./owl/jquery-1.9.1.min.js"></script> 
+    <script src="./owl/owl.carousel.js"></script>
+
+  
 </head>
 
 <body >
