--- a/client/index/index.html
+++ b/client/index/index.html
@@ -14,14 +14,11 @@
    
     <style type="text/css" id="dynamicCss"></style>
     <script type="text/javascript">
-        if(Meteor.isCordova){
-            $("head").append('<script type="text/javascript" src="/phonegap/facebook-js-sdk.js"/>');
-            $("head").append('<script type="text/javascript" src="/phonegap/cdv-plugin-fb-connect.js"/>');
-        }
+        // if(Meteor.isCordova){
+        //     $("head").append('<script type="text/javascript" src="/phonegap/facebook-js-sdk.js"/>');
+        //     $("head").append('<script type="text/javascript" src="/phonegap/cdv-plugin-fb-connect.js"/>');
+        // }
     </script>
-    <link href="./owl/owl.carousel.css" rel="stylesheet">
-    <script src="./owl/jquery-1.9.1.min.js"></script> 
-    <script src="./owl/owl.carousel.js"></script>
 
   
 </head>
