--- a/client/menu/slider/slider.html
+++ b/client/menu/slider/slider.html
@@ -17,14 +17,15 @@
 	  		<h3>{{lang.carousel.page4Title}}</h3>
 			<h4>{{lang.carousel.page4Body}}</h4>
 		</div>
-		<div>
+		<!-- <div>
 	  		<h3>{{lang.carousel.page5Title}}</h3>
 			<h4>{{lang.carousel.page5Body}}</h4>
 		</div>
 	  	<div>
-	  		<img src="http://placehold.it/1170x200/42bdc2/FFFFFF">
-	  	</div>
-	  	<div>
+	  		<h3>{{lang.carousel.page1Title}}</h3>
+			<h4>{{lang.carousel.page1Body}}</h4>
+	  	</div> -->
+	  	<!-- <div>
 	  		<img src="http://placehold.it/1170x500/42bdc2/FFFFFF">
 	  	</div>
 	  	<div>
@@ -41,7 +42,7 @@
 	  	</div>
 	  	<div>
 	  		<img src="http://placehold.it/1170x500/42bdc2/FFFFFF">
-	  	</div>
+	  	</div> -->
 	</div>
 
 
