--- a/client/menu/slider/slider.html
+++ b/client/menu/slider/slider.html
@@ -51,7 +51,7 @@
     <script>
     $(document).ready(function() {
       $("#owl-demo").owlCarousel({
-        autoPlay : 3000,
+        //autoPlay : 3000,
         stopOnHover : true,
         navigation:true,
         paginationSpeed : 1000,
