--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -54,7 +54,7 @@
                 <li>
                     <a  class="height40">
                         <label class="large-9 small-7 medium-9 columns">{{lang.scorebord.mxscore}}</label>
-                        <label class="large-3 small-5 medium-3 columns ">{{profile.maxScore}}</label>
+                        <label class="large-3 small-5 medium-3 columns ">{{maxScore}}</label>
                     </a>
                 </li>
                 <li class="textRight">
