day in row fixed and black and white smile added

--- a/client/famous/demo.html
+++ b/client/famous/demo.html
@@ -51,7 +51,7 @@
 		<!-- <div id="endGame" class="textRight ">
 	    	<a  class="textRight" id="endGame">STOP</a>
   		</div> -->
-	<div id="clickEvent" class="large-12 small-12 medium-12 columns"> 
+	<div id="clickEvent" class="large-12 small-12 medium-12 large-centered small-centered medium-centered columns"> 
 		{{#each image}}
 			<div class="card small-3 columns" >
 		    <figure class="front main">
