--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -55,7 +55,7 @@
 </template>
 <template name="updated">
  {{#if lastupdate}}
- <div class="large-12 small-12 medium-12 columns panel">
+ <div class="large-12 small-12 medium-12 columns panel" style="margin-top: 11%;">
     <div id="updated" class="">
             <div data-alert="" class="popups  large-12 medium-12 small-12 columns textCenter">
                 <!-- {{> GamerTimerimer}} -->
