--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -1,5 +1,5 @@
 <template name="home"> 
-	<div class="column large-4 large-centered small-12 medium-12">
+	<div class="column large-4 large-centered small-centered medium-centered small-12 medium-8">
 	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
     		<!-- {{> timeCount}}  -->
     	<div id="rest">
