--- a/client/menu/menu.html
+++ b/client/menu/menu.html
@@ -59,8 +59,8 @@
                 </li>
                 <li class="textRight">
                     <a  class="height40">
-                        <label class="large-3 small-3 medium-3 columns textLeft">{{lang.scorebord.email}}:</label>
-                        <label class="large-9 small-9 medium-9 columns textRight">{{myEmail}}</label>
+                        <label class="large-3 small-3 medium-3 columns textLeft addEmailUser">{{lang.scorebord.email}}:</label>
+                        <label class="large-9 small-9 medium-9 columns textRight">{{profile.email}}</label>
                     </a>                
                 </li>
             </ul>  
