click selected once

--- a/client/famous/demo.html
+++ b/client/famous/demo.html
@@ -38,6 +38,7 @@
 			{{/EdgeSwapper}}
 		{{/each}}
 	</div>
+	hi
 </template>
 
 <template name="secondContent"> 
@@ -53,7 +54,7 @@
   		</div> -->
 	<div id="clickEvent" class="large-12 small-12 medium-12 large-centered small-centered medium-centered columns"> 
 		{{#each image}}
-			<div class="card small-3 columns" >
+			<div class="card small-3 columns sortable" >
 		    <figure class="front main">
 		    	{{{first}}}
 		    </figure>
