--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -2,14 +2,20 @@
 	<div class="column large-4 large-centered small-centered medium-centered small-12 medium-8">
 	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
     		<!-- {{> timeCount}}  -->
-    	<div id="rest">
+    	<div class="row" id="rest">
     		{{> menuListPanel}}
     	</div>
-    	<div id="gameMain">
+    	<div id="gameMain"  class="row">
     		{{> famous}}
     	</div>
+        <div class="selected row">
+                        
+        </div>
+        <div class="zoomed">
+            
+        </div>
          {{> updated}}
          {{> ratingPopup}}
-		<!-- </div> -->
+        <!-- </div> -->
     </div>
 </template>
