--- a/client/index/index.html
+++ b/client/index/index.html
@@ -27,6 +27,8 @@
 	 <!-- {{> route}} -->
    <div id="fb-root"></div>
    <!-- facebook webapp div -->
+   <script type="application/dart" src="example.dart.js"></script>
+  <script src="packages/browser/dart.js"></script>
 </body>
 
 
