email data added

--- a/client/famous/gameTimer/gameTimer.html
+++ b/client/famous/gameTimer/gameTimer.html
@@ -22,9 +22,13 @@
 		{{> onScore}}
 	</div>
 	<div class="row">
-		{{lang.facebook.shareThisScore}}
-		<a id="shareWithFacebook" class="large-4 small-4 medium-4 columns" ><i class="fa fa-facebook-square"></i> </a>
-		<a id="shareWithTwitter" class="large-4 small-4 medium-4 columns" ><i class="fa fa-twitter-square"></i> </a>
-		<a id="shareWithAny" class="large-4 small-4 medium-4 columns" ><i class="fa fa-adn-square"></i> </a>
+	<div class="large-12 small-12 medium-12 columns">
+		<div class="large-6 small-6 medium-6 columns" >	
+			{{lang.facebook.shareThisScore}}
+		</div>
+		<div id="shareWithFacebook" class="large-6 small-6 medium-6 columns" ><i class="fa fa-facebook-square"></i> </div>
+		<!-- <a id="shareWithTwitter" class="large-4 small-4 medium-4 columns" ><i class="fa fa-twitter-square"></i> </a> -->
+		<!-- <a id="shareWithAny" class="large-4 small-4 medium-4 columns" ><i class="fa fa-adn-square"></i> </a> -->
+		</div>
 	</div>
 </template>
