--- a/client/famous/demo.html
+++ b/client/famous/demo.html
@@ -67,6 +67,34 @@
 	<!-- <div class="large-12 small-12 medium-12 columns"> 
 	</div> -->
 </template>
+
+
+
+<template name="content2"> 
+		<!-- <div id="endGame" class="textRight ">
+	    	<a  class="textRight" id="endGame">STOP</a>
+  		</div> -->
+	<div id="clickEvent" class="large-12 small-12 medium-12 large-centered small-centered medium-centered columns"> 
+		{{#each image}}
+			<div class="card small-3 columns sortable" >
+		    <figure class="front main">
+		    	{{{first}}}
+		    </figure>
+		    <figure class="back main">
+		    	{{{second}}}
+		    </figure>
+  		</div>
+		{{/each}}
+	</div>
+	<!-- <div class="large-12 small-12 medium-12 columns"> 
+	</div> -->
+</template>
+
+
+
+
+
+
 <!-- 
 	<template name="content"> 
 	<div id="clickEvent"> 
