--- a/client/famous/new_box/new_box.html
+++ b/client/famous/new_box/new_box.html
@@ -1,5 +1,6 @@
 <template name="newBox">
 	<div id="sisxteenBox" class="large-12 small-12 medium-12 columns panel">
+	{{> gamePopUp}}
 		<div id="faceContainer" class="large-12 small-12 medium-12 large-centered small-centered medium-centered columns" style="width: 440px; height: 440px;"> 
 		
 			<div class="card small-3 columns faceBox">
