drag half is done

--- a/client/famous/localPopUp/local_PopUp.html
+++ b/client/famous/localPopUp/local_PopUp.html
@@ -52,7 +52,12 @@
         </div>
         {{/each}}
     </div>
+    {{> rankImg}}
     <!-- <div class="large-12 small-12 medium-12 columns"> 
     </div> -->
 </template>
-
+<template name="rankImg">
+    <div class="overlay rankImg">
+        
+    </div>
+</template>
