--- a/client/famous/famous.html
+++ b/client/famous/famous.html
@@ -5,11 +5,11 @@
 		{{> gameEndPopUp}}		
 		{{> content}}		
 	</div>
-	<div id="famousSquare2" class="large-12 small-12 medium-12 columns panel">
+<!-- 	<div id="famousSquare2" class="large-12 small-12 medium-12 columns panel">
 		{{> gamePopUp2}}
 		{{> gameEndPopUp2}}		
 		{{> content2}}		
-	</div>
+	</div> -->
 </template>
 <!-- 
 	{{> gamePopUp}}
