--- a/client/famous/localPopUp/local_PopUp.html
+++ b/client/famous/localPopUp/local_PopUp.html
@@ -57,7 +57,8 @@
     </div> -->
 </template>
 <template name="rankImg">
-    <div class="overlay rankImg">
-        
+    <div class="overlayRank rankImg">
+        <div class="barHorizontal"></div>
+        <div class="barVertical"></div>
     </div>
 </template>
