--- a/client/famous/gamePopUp/gamePopUp.html
+++ b/client/famous/gamePopUp/gamePopUp.html
@@ -105,7 +105,7 @@
                             <p>challange was sent to:</p>
                         </div>
                         {{#each emails}}
-                            {{ids}}
+                            {{ids}},
                         {{/each}}
                     </div>
                     
