--- a/client/index/index.html
+++ b/client/index/index.html
@@ -19,7 +19,7 @@
         //     $("head").append('<script type="text/javascript" src="/phonegap/cdv-plugin-fb-connect.js"/>');
         // }
     </script>
-
+    <script type="text/javascript" src="touchswipe.js"></script>
   
 </head>
 
