--- a/client/famous/localPopUp/local_PopUp.html
+++ b/client/famous/localPopUp/local_PopUp.html
@@ -61,4 +61,9 @@
         <div class="barHorizontal"></div>
         <div class="barVertical"></div>
     </div>
+    <div class="textCenter large-12 medium-12 columns backButton">    
+        <div id="backButton" class="button ui" style="background:cyan;">            
+            Back
+        </div>
+    </div>
 </template>
