--- a/client/homepage/homepage.html
+++ b/client/homepage/homepage.html
@@ -2,7 +2,7 @@
 	<div class="column large-4 large-centered small-centered medium-centered small-12 medium-8">
 	    <!-- <div class="column large-12 small-12 medium-12 scrolly"> -->
     		<!-- {{> timeCount}}  -->
-        <a id="iconButton" href="{{lang.settings.apkDownloadLink}}" class="button {{#if cordova}} {{else}} none {{/if}}"><img src="/images/happy.png"></a>
+        <a id="iconButton" href="{{lang.settings.apkDownloadLink}}" class="button {{#if cordova}} hideItem {{else}}  {{/if}}"><img src="/images/happy.png"></a>
     	<div class="row" id="rest">
     		{{> menuListPanel}}
     	</div>
